Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34770

V4: ASSERT: "use.pos < successorStart || use.pos > successorEnd"

    XMLWordPrintable

Details

    • 4ed95774ed15f195da157c7c17a45e0c8c895054

    Description

      import QtQuick 2.0
      
      Item {
          property real labelCount: 10
          property real count: 5
      
          Component.onCompleted: {
              var difference = labelCount - count;
              if (difference > 0) {
                  for (; difference > 0; --difference) {
                  }
              } else if (difference < 0) {
                  for (; difference < 0; ++difference) {
                  }
              }
          }
      }
      
      ASSERT: "use.pos < successorStart || use.pos > successorEnd" in file /home/micurtis/dev/qt5-stable/qtdeclarative/src/qml/compiler/qv4regalloc.cpp, line 876
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              erikv Erik Verbruggen
              mitch_curtis Mitch Curtis
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes